# bazel-sonarqube

./: .gitignore  BUILD  BUILD.bazel  BUILD.sonar_scanner  MODULE.bazel  README.md  WORKSPACE  defs.bzl  extensions.bzl  repositories.bzl  sonar-project.properties.tpl
.github/: generate-notes.sh
.github/workflows/: create-release.yml
docs/: BUILD.bazel  bazel_sonarqube.md
examples/: README.md
examples/java/: .bazelrc  BUILD  WORKSPACE
examples/java/subproject/: BUILD
examples/java/subproject-with-separate-sonarqube/: BUILD
examples/java/subproject-with-separate-sonarqube/src/main/java/com/separate/: BUILD  SeparateApp.java
examples/java/subproject-with-separate-sonarqube/src/test/java/com/separate/: BUILD  SeparateAppTest.java
examples/java/subproject-with-separate-sonarqube/subsubproject/: BUILD
examples/java/subproject-with-separate-sonarqube/subsubproject/src/main/java/com/separate/subsubproject/: BUILD  SeparateSubSubApp.java
examples/java/subproject-with-separate-sonarqube/subsubproject/src/test/java/com/separate/subsubproject/: BUILD  SeparateSubSubAppTest.java
examples/java/subproject/src/main/java/com/example/: App.java  BUILD
examples/java/subproject/src/test/java/com/example/: AppTest.java  AppTest2.java  AppTest3.java  BUILD
examples/swift/: .bazelrc  BUILD.bazel  MODULE.bazel  README.md  WORKSPACE  sonar-project.properties.tpl
examples/swift/app/: BUILD.bazel  Info.plist
examples/swift/app/source/: ContentView.swift
examples/swift/modules/: BUILD.bazel
examples/swift/modules/API/: BUILD.bazel
examples/swift/modules/API/API/: API.swift
examples/swift/modules/API/Tests/: APITests.swift
examples/swift/modules/Models/: BUILD.bazel
examples/swift/modules/Models/Models/: Models.swift
examples/swift/modules/Models/Tests/: ModelsTests.swift
examples/swift/tools/: extensions.bzl  repositories.bzl  shared.bzl
src/main/java/com/google/devtools/coverageoutputgenerator/: SonarQubeCoverageGenerator.java  SonarQubeCoverageReportPrinter.java
