module(
    name = "bazel_sonarqube",
    version = "1.0.0",
    compatibility_level = 1,
    repo_name = "bazel_sonarqube",
)

bazel_dep(name = "bazel_skylib", version = "1.0.3", repo_name = "bazel_skylib")

bazel_dep(
    name = "stardoc",
    version = "0.6.2",
    dev_dependency = True,
    repo_name = "io_bazel_stardoc",
)

non_module_dependencies = use_extension("//:extensions.bzl", "non_module_dependencies")
use_repo(non_module_dependencies, "bazel_version", "org_sonarsource_scanner_cli_sonar_scanner_cli")