bazel_dep(name = "bazel_skylib", version = "1.6.1")
bazel_dep(name = "rules_xcodeproj", version = "2.3.1")
bazel_dep(
    name = "apple_support",
    version = "1.15.1",
    repo_name = "build_bazel_apple_support",
)
bazel_dep(
    name = "rules_swift",
    version = "1.18.0",
    repo_name = "build_bazel_rules_swift",
)
bazel_dep(
    name = "rules_apple",
    version = "3.5.1",
    repo_name = "build_bazel_rules_apple",
)
bazel_dep(
    name = "buildifier_prebuilt",
    version = "6.3.3",
    dev_dependency = True,
)

bazel_dep(
    name = "bazel_sonarqube",
    version = "1.0.1",
    repo_name = "bazel_sonarqube",
)
local_path_override(
    module_name = "bazel_sonarqube",
    path = "../../",
)

non_module_dependencies = use_extension("//tools:extensions.bzl", "non_module_dependencies")
use_repo(non_module_dependencies, "SwiftLint")