load("@build_bazel_rules_apple//apple:ios.bzl", "ios_unit_test")
load("@build_bazel_rules_swift//swift:swift.bzl", "swift_library")
load("//tools:shared.bzl", "versions")

# Code

swift_library(
    name = "ModelsLib",
    srcs = [
        "Models/Models.swift",
    ],
    module_name = "Models",
    visibility = ["//modules:default_library_visibility"],
)

# Tests

swift_library(
    name = "ModelsTestsLib",
    testonly = True,
    srcs = [
        "Tests/ModelsTests.swift",
    ],
    module_name = "ModelsTests",
    deps = [
        ":ModelsLib",
    ],
)

ios_unit_test(
    name = "ModelsTests",
    minimum_os_version = versions.minimum_ios_version,
    visibility = ["//modules:default_test_visibility"],
    deps = [":ModelsTestsLib"],
)
